sftpgo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sftpgo
  namespace: sftp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sftpgo
  template:
    metadata:
      labels:
        app: sftpgo
    spec:
      securityContext:  # This is at Pod level
        fsGroup: 1000
        fsGroupChangePolicy: Always
      containers:
      - name: sftpgo
        image: carne.azurecr.io/sftp/carne-sftpgo:latest #drakkan/sftpgo:latest
        ports:
        - containerPort: 2022  # SFTP port
        - containerPort: 8080  # HTTP API and web admin interface port
        securityContext:  # This is at Container level
          runAsUser: 1000
          runAsGroup: 1000
        volumeMounts:
        - name: sftpgo-storage
          mountPath: /srv/sftpgo/data  # SFTPGo default data path
      imagePullSecrets:
      - name: acr-credentials  # reference to your ACR credentials secret
      volumes:
      - name: sftpgo-storage
        persistentVolumeClaim:
          claimName: sftpgo-pvc
