sftpgo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sftpgo
  namespace: sftp
spec:
  type: LoadBalancer
  selector:
    app: sftpgo
  ports:
  # - name: sftp
  #   protocol: TCP
  #   port: 2022
  #   targetPort: 2022
  - name: http
    protocol: TCP
    port: 8089
    targetPort: 8080
